<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">toko-paerbe</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="next">Next</string>
    <string name="join">Join Now</string>
    <string name="email" translatable="false">Email</string>
    <string name="example_test_gmail_com">Example: test@gmail.com</string>
    <string name="password">Password</string>
    <string name="or_register_with">or register with</string>
    <string name="register">Register</string>
    <string name="minimum_8_characters">Minimum 8 characters</string>
    <string name="or_login_with">or login with</string>
    <string name="tnc"> <![CDATA[By entering here, you agree to the Terms & Conditions and TokoPhincon Privacy Policy.]]></string>
    <string name="profile">Profile</string>
    <string name="done">Done</string>
    <string name="name">Name</string>
    <string name="email_cannot_be_empty">Email cannot be empty!</string>
    <string name="password_cannot_be_empty">Password cannot be empty!</string>
    <string name="invalid_email">Invalid email</string>
    <string name="notification">Notification</string>
    <string name="shopping">shopping</string>
    <string name="home" translatable="false">Home</string>
    <string name="store">Store</string>
    <string name="whistlist">WhistList</string>
    <string name="select_image">Select Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="username_cannot_be_empty">Username cannot be empty</string>
    <string name="picture_cannot_be_empty">Picture cannot be empty</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="wrong_email_or_password">Wrong Email or Password</string>
    <string name="successful_registration">Successful Registration</string>
    <string name="failed_to_register">Failed to Register</string>
    <string name="welcome">Welcome</string>
    <string name="failed_profile">Failed Profile</string>
    <string name="logout">Logout</string>
    <string name="light">Light</string>
    <string name="en" translatable="false">en</string>
    <string name="id" translatable="false">id</string>
    <string name="dark">Dark</string>
    <string name="search">Search</string>
    <string name="internal_server_error">Internal server error</string>
    <string name="refresh">Refresh</string>
    <string name="filter" translatable="false">Filter</string>
    <string name="lenovo_legion_7_16_i7_11800_16gb_1tb_ssd_rtx3070_8gb">Lenovo Legion 7 16 I7 11800 16GB 1TB SSD RTX3070 8GB</string>
    <string name="sold">%5.0% | Sold %10%</string>
    <string name="price">Rp.27.000.0000</string>
    <string name="prostorecomputer">prostorecomputer</string>
    <string name="detail_product">Detail product</string>
    <string name="detail_title_store">Lenovo Legion 7 16 I7 11800 16GB 1TB SSD RTX3070 8GB Windows 11 QHD IPS</string>
    <string name="sold_10">Sold %10%</string>
    <string name="rating_dan_ulasan">%4.5% (%2%)</string>
    <string name="select_variant">Select variant</string>
    <string name="product_description">Product description</string>
    <string name="buyer_reviews">Buyer reviews</string>
    <string name="see_all">See all</string>
    <string name="_5_0">/ 5.0</string>
    <string name="_100_buyers_feel_satisfied">%100%% Buyers Feel Satisfied</string>
    <string name="rating_dan_review">%2% Rating %3% Review</string>
    <string name="buy">Buy</string>
    <string name="cart_plus">+ Cart</string>
    <string name="username">Username</string>
    <string name="lorem" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\\\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="remove_fav">Remove fav</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="transaction">Transaction</string>
    <string name="io_exception_code">Connection</string>
    <string name="io_exception_message">Your connection is unavailable</string>
    <string name="http_exception_404_code">Empty</string>
    <string name="http_exception_404_message">Your requested data is unavailable</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="review">Review</string>
    <string name="sale">Sale</string>
    <string name="lowest_price">Lowest Price</string>
    <string name="highest_price">Highest Price</string>
    <string name="category">Category</string>
    <string name="apple" translatable="false">Apple</string>
    <string name="asus" translatable="false">Asus</string>
    <string name="dell" translatable="false">Dell</string>
    <string name="lenovo" translatable="false">Lenovo</string>
    <string name="textPrice">Price</string>
    <string name="lowest">Lowest</string>
    <string name="highest">Highest</string>
    <string name="show_products">Show Products</string>
    <string name="sort">Sort</string>
    <string name="success_added_to_wishlist">success added to wishlist</string>
    <string name="empty">Empty</string>
    <string name="item_s">%1$d Item(s)</string>
    <string name="choose_all">Choose All</string>
    <string name="chart">Chart</string>
    <string name="delete">Delete</string>
    <string name="total_payment">Total Payment</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="success_added_to_chart">Success added to cart</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="_5_left">%5% Left</string>
    <string name="stock">Stock %5%</string>
    <string name="checkout" translatable="false">Checkout</string>
    <string name="purchased_item_s">Purchased Item(s)</string>
    <string name="payment">Payment</string>
    <string name="choose_payment_method">Choose payment method</string>
    <string name="_1x" translatable="false">%1%x</string>
    <string name="info">Info</string>
    <string name="transaction_successful">Transaction successful</string>
    <string name="date_time_notification" translatable="false">%1$s, %2$s</string>
    <string name="select_payment">select_payment</string>
    <string name="status" translatable="false">Status</string>
    <string name="payment_success">Payment Success</string>
    <string name="leave_a_review">Leave a review</string>
    <string name="transaction_detail">Transaction detail</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="date">Date</string>
    <string name="payment_method">Payment Method</string>
    <string name="time">Time</string>
    <string name="succeed">Succeed</string>
    <string name="failed">Failed</string>
    <string name="error_500">500</string>
    <string name="shop">Shop</string>
    <string name="_22_june_2023">22 June 2023</string>
</resources>