<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.bottomnav.store.bottomsheet.BottomSheetFragment">


    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/dh_bottom_sheet"
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_drag_handle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:nestedScrollingEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/dh_bottom_sheet">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tv_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/filter" />

            <Button
                android:id="@+id/btn_reset"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_filter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_filter"
                tools:text="@string/reset" />

            <TextView
                android:id="@+id/tv_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/tv_filter"
                app:layout_constraintTop_toBottomOf="@id/tv_filter"
                tools:text="@string/sort" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_sort"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/white"
                android:backgroundTintMode="screen"
                android:elevation="0dp"
                app:chipSpacingVertical="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_sort"
                app:layout_constraintTop_toBottomOf="@id/tv_sort"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/cp_review"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/review"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/cp_sale"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/sale"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/cp_lowest"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/lowest_price"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/cp_highest"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/highest_price"/>



            </com.google.android.material.chip.ChipGroup>


            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                tools:text="@string/category"
                android:fontFamily="@font/poppins_bold"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/cg_sort"
                app:layout_constraintTop_toBottomOf="@id/cg_sort"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:chipSpacingVertical="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_category"
                app:layout_constraintTop_toBottomOf="@id/tv_category"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/cp_apple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/apple" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cp_asus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/asus" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cp_dell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/dell" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cp_lenovo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/lenovo" />
            </com.google.android.material.chip.ChipGroup>


            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                tools:text="@string/textPrice"
                app:layout_constraintStart_toStartOf="@id/cg_category"
                app:layout_constraintTop_toBottomOf="@id/cg_category"/>

            <View
                android:id="@+id/v_acndhor_search_bs_mid"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_lowest"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                tools:hint="@string/lowest"
                app:layout_constraintEnd_toStartOf="@id/v_acndhor_search_bs_mid"
                app:layout_constraintStart_toStartOf="@id/tv_price"
                app:layout_constraintTop_toBottomOf="@id/tv_price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_lowest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_highest"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                tools:hint="@string/highest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/v_acndhor_search_bs_mid"
                app:layout_constraintTop_toBottomOf="@id/tv_price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_highest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_show"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/show_products"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/input_highest"
                app:layout_constraintStart_toStartOf="@id/input_lowest"
                app:layout_constraintTop_toBottomOf="@id/input_lowest" />

            <View
                android:id="@+id/bottom_line"
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_show" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>