<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item_transaction"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="4dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_item_transaction_ic_bag"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_shopping_bag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/shop"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@id/iv_item_transaction_ic_bag"
            app:layout_constraintTop_toTopOf="@id/iv_item_transaction_ic_bag" />

        <TextView
            android:id="@+id/tv_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_400"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@id/tv_item_shop"
            app:layout_constraintTop_toBottomOf="@id/tv_item_shop"
            tools:text="@string/_22_june_2023" />

        <ImageView
            android:id="@+id/img_item_done"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="-4dp"
            android:layout_marginTop="-2dp"
            android:layout_marginEnd="-4dp"
            android:layout_marginBottom="-2dp"
            android:src="@drawable/bg_rounded_purple_pale"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_done"
            app:layout_constraintEnd_toEndOf="@id/tv_item_done"
            app:layout_constraintStart_toStartOf="@id/tv_item_done"
            app:layout_constraintTop_toTopOf="@id/tv_item_done" />

        <TextView
            android:id="@+id/tv_item_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_600"
            android:text="@string/done"
            android:textColor="?attr/colorPrimary"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_item_transaction_ic_bag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_item_shop" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/dvdr_item_transaction_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/iv_item_transaction_ic_bag" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_item_transaction_img_product"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/thumbnail_load_product"
            app:layout_constraintStart_toStartOf="@id/iv_item_transaction_ic_bag"
            app:layout_constraintTop_toBottomOf="@id/dvdr_item_transaction_1"
            app:shapeAppearanceOverlay="@style/customRoundedImageView8dp" />

        <TextView
            android:id="@+id/tv_item_transaction_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="36dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_medium"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_item_transaction_img_product"
            app:layout_constraintTop_toTopOf="@id/iv_item_transaction_img_product"
            tools:text="@string/lenovo_legion_7_16_i7_11800_16gb_1tb_ssd_rtx3070_8gb" />

        <TextView
            android:id="@+id/tv_item_transaction_total_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@id/tv_item_transaction_product_name"
            app:layout_constraintStart_toStartOf="@id/tv_item_transaction_product_name"
            app:layout_constraintTop_toBottomOf="@id/tv_item_transaction_product_name"
            tools:text="@string/item_s" />

        <TextView
            android:id="@+id/tv_item_transaction_total_pay_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_400"
            android:text="@string/total_payment"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@id/iv_item_transaction_img_product"
            app:layout_constraintTop_toBottomOf="@id/iv_item_transaction_img_product" />

        <TextView
            android:id="@+id/tv_item_transaction_total_pay_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_600"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_item_transaction_total_pay_title"
            app:layout_constraintTop_toBottomOf="@id/tv_item_transaction_total_pay_title"
            tools:text="@string/price" />

        <Button
            android:id="@+id/btn_item_transaction_review"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/poppins_600"
            style="@style/Widget.App.Button"
            android:text="@string/review"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>