<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    app:cardBackgroundColor="@color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/img_store"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/img_alert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins"
            android:text="@string/lenovo_legion_7_16_i7_11800_16gb_1tb_ssd_rtx3070_8gb"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_store" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            tools:text="@string/price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <ImageView
            android:id="@+id/img_icon"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_account_circle_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_price" />

        <TextView
            android:id="@+id/tv_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins"
            android:text="@string/prostorecomputer"
            app:layout_constraintBottom_toBottomOf="@id/img_icon"
            app:layout_constraintStart_toEndOf="@id/img_icon"
            app:layout_constraintTop_toTopOf="@id/img_icon" />

        <ImageView
            android:id="@+id/img_icon_review"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_star"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_icon" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins"
            android:text="@string/sold"
            app:layout_constraintStart_toEndOf="@id/img_icon_review"
            app:layout_constraintBottom_toBottomOf="@id/img_icon_review"
            app:layout_constraintTop_toTopOf="@id/img_icon_review" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>